# smetna-software

./: README.md  calc.py  pyproject.toml
